tdf#38575 sw layout: at 2 empty pages, stop trying to create more

At some point, trying to create a new page
for a follow doesn't make sense anymore.

If it doesn't fit on 2 pages (assuming a right and left page)
then just force it to layout as it is.

This fixes a longstanding layout loop.

make CppunitTest_sw_ooxmlexport27 \
    CPPUNIT_TEST_NAME=testTdf38575_fullWidthLine

Change-Id: I5beb77a477918f50ea7f68a423459f33fc32631e
Reviewed-on: https://gerrit.collaboraoffice.com/c/core/+/782
Reviewed-by: Justin Luth <justin.luth@collabora.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins CPCI <releng@collaboraoffice.com>